# videosaurus

./: .eslintrc.json  .gitignore  LICENSE.md  README.md  forge.config.ts  package.json  tsconfig.json  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js
.github/workflows/: node.yml
app/: icon.icns  index.css  index.html  index.ts  preload.ts  renderer.tsx
app/components/: MessageForm.tsx  NetworkInterface.tsx  TitleBar.tsx
engine/: .clang-format  CMakeLists.txt  dependencies.vcpkg  package.json
engine/source/: __common.hpp  master.cpp  master.hpp  network.hpp  node-addon.cpp  object.cpp  object.hpp  util.hpp
engine/source/__common/: __common.hpp  termcolor.hpp  termsymbol.hpp
engine/source/network/: context.cpp  context.hpp  network.cpp  network.hpp  node.cpp  node.hpp  zeromq.hpp
engine/source/node-interface/: master.cpp  master.hpp  node-interface.cpp
engine/source/nodejs-interface/: async.hpp  master.cpp  master.hpp  nodejs-interface.cpp  nodejs-interface.hpp
engine/source/util/: typeinfo.cpp  typeinfo.hpp  util.hpp
engine/source/webcam/: webcam.cpp  webcam.hpp
extensions/: react-devtools.crx
extensions/react-devtools/: manifest.json
src/: index.ts  renderer.tsx
